added active links to sub nav

--- a/html/nds-commercial-products.html
+++ b/html/nds-commercial-products.html
@@ -166,7 +166,7 @@
                     <ul class="sub-nav sub3">
                         <li><a class="about-drop-link" href="/html/nds.html">NDS STORMCHAMBER</a></li>
                         <li><a  class="contact-drop-link" href="/html/nds-residential-drainage-products.html">RESIDENTIAL</a></li>
-                        <li><a  class="contact-drop-link" href="/html/nds-commercial-products.html">COMMERCIAL</a></li>
+                        <li><a  class="contact-drop-link active-menu" href="/html/nds-commercial-products.html">COMMERCIAL</a></li>
                     </ul>
                 </li>
             </ul>
