--- a/html/nds-residential-drainage-products.html
+++ b/html/nds-residential-drainage-products.html
@@ -167,7 +167,7 @@
                 <li class="contact-li"><a class="c-link active-menu" href="/html/nds.html">NDS</a><i class="fas fa-chevron-down contact-dropdown icon-drop active-menu"></i>
                     <ul class="sub-nav sub3">
                         <li><a class="about-drop-link" href="/html/nds.html">NDS STORMCHAMBER</a></li>
-                        <li><a  class="contact-drop-link" href="/html/nds-residential-drainage-products.html">RESIDENTIAL</a></li>
+                        <li><a  class="contact-drop-link active-menu" href="/html/nds-residential-drainage-products.html">RESIDENTIAL</a></li>
                         <li><a  class="contact-drop-link" href="/html/nds-commercial-products.html">COMMERCIAL</a></li>
                     </ul>
                 </li>
