--- a/html/map-system.html
+++ b/html/map-system.html
@@ -148,6 +148,8 @@
                         <li><a id="contact-width-change" class="service-drop-link active-sub-menu" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="concrete.html">CONCRETE ACCESSORIES</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="materials.html">BUILDING MATERIALS</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link" href="/html/map-system.html">MAXWELL AIRTIGHT PROUDUCTS</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link" href="/html/nds.html">NDS DRAINAGE PRODUCTS</a></li>
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
