--- a/html/promotions.html
+++ b/html/promotions.html
@@ -149,6 +149,7 @@
                         <li><a class="contact-width-change service-drop-link" href="materials.html">BUILDING MATERIALS</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="simpson-strong-tie.html">SIMPSON STRONG TIE</a></li>
                         <li><a id="contact-width-change" class="service-drop-link" href="/html/map-system.html">MAXWELL AIRTIGHT PROUDUCTS</a></li>
+                        <li><a id="contact-width-change" class="service-drop-link" href="/html/nds.html">NDS DRAINAGE PRODUCTS</a></li>
                     </ul>
                 </li>
                 <li><a class="active-menu active-menu-main" href="promotions.html">PROMOTIONS</a></li>
@@ -264,59 +265,6 @@
                     valleyconstructionsupply.com</span> for more information!</p>
                 <button class="solid gallery-button"  type="button" onclick="location.href='https://tryadvantechsfa.com/'">
                     VISIT ADVANTECH
-                </button>
-            </div>
-        </div>
-    </section>
-
-    <!-- ============================================ -->
-    <!--                    JOTO                      -->
-    <!-- ============================================ -->
-
-    <section class="advantech-promotion container">
-        <div class="experience">
-            <div class="image-box joto-box">
-                <img src="/images/joto-vent.jpg" alt="joto vent system graphics">
-            </div>
-            <div class="experience-content">
-                <h4>Joto-Vent Systems</h4>
-                <p class="promo">Promo Code</p>
-                <p class="code">VCSJOTOVENT</p>
-                <h3>Buy One Joto-Vent system at $5.95 LF and receive 50% off the 2nd vent system.</h3>
-                <P>The Joto-Vent system is a perimeter vent system that uses a unique honeycomb vent that is 3/4" thick by 6" 
-                    wide that goes between the concrete foundation and the wooded sill plate.  The vent is installed around the complete 
-                    perimeter of your crawl space foundation to maximize the cross of ventilation and air flow into and out of the 
-                    crawl space.  This natural positive and negative air flow in and out of the crawl space preserves the life span 
-                    of the wooden frame of your house.
-                </P>
-                <h4>Key Features:</h4>
-                <ul class="list">
-                    <li class="header">Architectural Clean Finished Look
-                        <ul>
-                            <li>The custom coverings of the vent and its nice clean finished look sheds water coming off of the siding and acts
-                                as a water back splash.
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="header">The Houses Structural Integrity
-                        <ul>
-                            <li>Joto-Vent System is structurally sound vs. what is currently being used, because there is no need to put vent 
-                                boxes in the concrete foundation or cutting vent holes in the wooden rim joist.
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="header">Natural Air Flow
-                        <ul>
-                            <li>This natural positive and negative airflow in and out of the crawl space preserves the lifespan of the 
-                                wooden frame in your home.
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-                <p>Contact Valley Construction Supply at <span class="email">websitesales@
-                    valleyconstructionsupply.com</span> for more information!</p>
-                <button class="solid gallery-button"  type="button" onclick="location.href='https://joto-vent.com/'">
-                    VISIT JOTO-VENT
                 </button>
             </div>
         </div>
