--- a/html/nds-residential-drainage-products.html
+++ b/html/nds-residential-drainage-products.html
@@ -190,7 +190,7 @@
         <div class="container landing-group">
             <div class="landing-text">
 
-                <h1>NDS Residetial Draining Solutions</h1>
+                <h1>NDS Residential Draining Solutions</h1>
                 
             </div>
         </div>
@@ -239,7 +239,7 @@
     <section id="tagline">
         <h2>NDS Residential Catch Basins & Drainage Boxes</h2>
         <p>
-            AtCatch basins, or drainage basins, help maintain proper drainage by catching debris before it can clog up downstream pipe systems. The water is collected on the bottom of a box while solids settle to the top. The connected pipe then directs water away from your home and into a sewage plant or stream. 
+            Catch basins, or drainage basins, help maintain proper drainage by catching debris before it can clog up downstream pipe systems. The water is collected on the bottom of a box while solids settle to the top. The connected pipe then directs water away from your home and into a sewage plant or stream. 
         </p>
     </section>
 
@@ -343,9 +343,9 @@
                     <p>15% OFF</p>
                 </div>
                 <div class="card-info container">
-                    <h3>Recieve a 15% disocunt!</h3>
-                    <p>Open a new list account and recieve an additional 15% discount for the first 3 billing cycles.
-                       Our normal terms on a new list account have a 10% disount when paid by the 10th of each month.
+                    <h3>Receive a 15% disocunt!</h3>
+                    <p>Open a new list account and receive an additional 15% discount for the first 3 billing cycles.
+                       Our normal terms on a new list account have a 10% discount  when paid by the 10th of each month.
                     </p>
                     <button class="solid rebar-contact" onclick="location.href='promotions.html'">
                         SEE ALL PROMOTIONS
