--- a/html/promotions.html
+++ b/html/promotions.html
@@ -235,7 +235,7 @@
                 <p class="promo">Promo Code</p>
                 <p class="code">VCS7ASUBFLKIT</p>
                 <h3>While Supplies Last</h3>
-                <P>For $95 you will recieve 6 cans of the Advantech sub floor glue, 1 can of cleaner,
+                <P>For $95 you will receive 6 cans of the Advantech sub floor glue, 1 can of cleaner,
                     and 1 can of pro grade foam applicator (small gun) which sells for wholesale at $175.  
                     Every 6 cans of Advantech glue equals 33 tubes of 28oz standard sub floor glue.
                 </P>
