--- a/index.html
+++ b/index.html
@@ -461,8 +461,8 @@
                 <p>15% OFF</p>
             </div>
             <div class="card-info container">
-                <h3>Recieve a 15% discount!</h3>
-                <p>Open a new list account and recieve an additional 15% discount for the first 3 billing cycles.
+                <h3>Receive a 15% discount!</h3>
+                <p>Open a new list account and receive an additional 15% discount for the first 3 billing cycles.
                    Our normal terms on a new list account have a 10% discount when paid by the 10th of each month.
                 </p>
                 <button class="solid rebar-contact" onclick="location.href='/html/promotions.html'">
