--- a/html/map-system.html
+++ b/html/map-system.html
@@ -354,9 +354,9 @@
                     <h4>How to receive  the rebate:</h4>
                     <ol>
                         <li>Fill out rebate <strong>certificate request form</strong></li>
-                        <li>Receieve certificate in your email</li>
+                        <li>2.	Receivecertificate in your email</li>
                         <li>Email a copy of your Valley Construction Supply invoice and certificate to <strong>tsuboi.k@interrausa.com</strong></li>
-                        <li>Receieve 10% rebate within 5-7 business days</li>
+                        <li>2.	Receive10% rebate within 5-7 business days</li>
                     </ol>
                     <button class="solid rebar-contact" onclick="location.href='promotions.html'">
                         SEE ALL PROMOTIONS
