--- a/html/map-system.html
+++ b/html/map-system.html
@@ -220,7 +220,7 @@
             <h2><span>Benefits</span> of using Maxell Airtight Products</h2>
             <ul>
                 <li>No nailing or needing to be taped on to use.</li>
-                <li>Grommet is <strong>ALL</strong> rubber and has a <strong>self-adhesive peel.</strong> and stick backing that requires only one step to install.</li>
+                <li>Grommet is <strong>ALL</strong> rubber and has a <strong>self-adhesive peel</strong> and stick backing that requires only one step to install.</li>
                 <li>Saves on time and labor.</li>
                 <li>Significantly less waste.</li>
             </ul>
@@ -236,12 +236,12 @@
         <div class="example">
             <img src="/images/example1.jpg" alt="sheathing joint">
             <h3>Sheathing Joint</h3>
-            <p>Create and air-tight seal against water and air between sheathing joints</p>
+            <p>Create an air-tight seal against water and air between sheathing joints</p>
         </div>
         <div class="example">
             <img src="/images/example2.jpg" alt="sheathing joint">
             <h3>Insulation Board Joint</h3>
-            <p>Create and air-tight seal between insulation boards.</p>
+            <p>Create an air-tight seal between insulation boards.</p>
         </div>
     </section>
 
