removed promo wording

--- a/html/promotions.html
+++ b/html/promotions.html
@@ -205,12 +205,11 @@
                 <img src="/images/group.png" alt="group image of three brands">
             </div>
             <div class="experience-content">
-                <h4>Open a new list account & receive and additional 15% off your first 3 billing cycles</h4>
+                <h4>Open a new list account & receive a 10% off your order.</h4>
                 <h3>Unlock the benefits! <br>Open you new account today!</h3>
-                <P>Unlock the benefits! Open your new account today
+                <P>Unlock the benefits! Open your new account today,
                     our normal terms on a list account is 10% discount when paid in full by the 10th
-                    of each month. With this new promotional account your terms will be 15%
-                    discount if paid in full by the 10th of the following month for your first 3 billing cycles.
+                    of each month.
                 </P>
                 <p>Contact Valley Construction Supply at <span class="email">websitesales@
                     valleyconstructionsupply.com</span> for more information!</p>
