--- a/index.html
+++ b/index.html
@@ -457,12 +457,12 @@
         </div>
         <div class="promotions-card">
             <div class="promotion-image">
-                <p>ADDITIONAL</p>
-                <p>15% OFF</p>
+                <p>receive</p>
+                <p>10% OFF</p>
             </div>
             <div class="card-info container">
-                <h3>Receive a 15% discount!</h3>
-                <p>Open a new list account and receive an additional 15% discount for the first 3 billing cycles.
+                <h3>Receive a 10% discount!</h3>
+                <p>Open a new list account and receive a 10% discount.
                    Our normal terms on a new list account have a 10% discount when paid by the 10th of each month.
                 </p>
                 <button class="solid rebar-contact" onclick="location.href='/html/promotions.html'">
